# ungraph

./: .gitignore  Cargo.toml  README.md  build.rs  sweep.sh
.github/workflows/: ci.yml
src/: main.rs  model.rs  onnx.rs  safetensors.rs  summary.rs
src/onnx/: mod.rs  summary.rs
src/safetensors/: mod.rs  summary.rs
