[package]
name = "ungraph"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
clap = { version = "4.0.29", features = ["derive"] }
petgraph = "0.6.2"
prost = "0.11.3"

[build-dependencies]
prost-build = { version = "0.11.3" }
